--- a/components/Banner/styles.module.css
+++ b/components/Banner/styles.module.css
@@ -9,6 +9,7 @@
 .banner_container > img {
 	width: 100%;
 	height: 100vh;
+	min-height: 640px;
 	object-fit: cover;
 	filter: brightness(64%);
 }
@@ -25,21 +26,14 @@
 .title_container {
 	position: absolute;
 	top: 50%;
-	left: 16%;
+	left: 216px;
+	margin-left: 8vw;
 	transform: translate(-50%, -50%);
 	color: white;
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
 	transition: left 0.5s ease;
-
-	@media (max-width: 1600px) {
-		left: 24%;
-	}
-
-	@media (max-width: 1000px) {
-		left: 38%;
-	}
 }
 
 .banner_button {
