--- a/components/Equipo/styles.module.css
+++ b/components/Equipo/styles.module.css
@@ -4,3 +4,15 @@
 	justify-content: center;
 	align-items: center;
 }
+
+.carousel_container {
+}
+
+.carousel_content {
+}
+
+.card_wrapper {
+}
+
+.card {
+}
