--- a/components/Equipo/styles.module.css
+++ b/components/Equipo/styles.module.css
@@ -1,18 +1,58 @@
 .wrapper {
 	width: 100%;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	gap: 48px;
 }
 
 .carousel_container {
+	display: flex;
+	gap: 32px;
 }
 
-.carousel_content {
+.card_container {
+	width: 416px;
+	height: 520px;
+	box-shadow: 0 5px 40px 0 rgba(0, 0, 0, 0.07);
+	border-radius: 5px;
+	background-color: white;
+	overflow: hidden;
 }
 
-.card_wrapper {
+.card_data {
+	width: 100%;
+	height: calc(100% - 400px);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 16px;
 }
 
-.card {
+.card_image_wrapper {
+	width: 100%;
+	height: 400px;
+	overflow: hidden;
+}
+
+.card_image {
+	width: 100%;
+	height: 100%;
+	border-radius: 5px;
+	object-fit: cover;
+	transition: transform 0.3s, filter 0.3s;
+}
+
+.card_image:hover {
+	transform: scale(1.1) rotate(5deg);
+}
+
+.card_text {
+	width: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	text-align: center;
 }
