--- a/components/Equipo/styles.module.css
+++ b/components/Equipo/styles.module.css
@@ -7,7 +7,41 @@
 	gap: 48px;
 }
 
+.team_container {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 48px;
+}
+
+.carousel_wrapper {
+	width: 100%;
+	position: relative;
+}
+
 .carousel_container {
+	width: 100%;
+	overflow: auto;
+	scrollbar-width: none;
+	-ms-overflow-style: none;
+	scroll-behavior: smooth;
+	padding: 24px 16px;
+	margin-top: -24px;
+}
+
+.empty_carousel_list {
+	display: flex;
+	justify-content: center;
+}
+
+.carousel_container::-webkit-scrollbar {
+	width: 0;
+}
+
+.carousel_list {
+	width: max-content;
 	display: flex;
 	gap: 32px;
 }
@@ -43,6 +77,7 @@
 	border-radius: 5px;
 	object-fit: cover;
 	transition: transform 0.3s, filter 0.3s;
+	user-select: none;
 }
 
 .card_image:hover {
@@ -55,4 +90,21 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	text-align: center;
+}
+
+.carousel_arrow {
+	position: absolute;
+	width: 32px;
+	height: 32px;
+	top: 45%;
+	transform: translateY(-50%);
+	z-index: 2;
+	cursor: pointer;
+	color: #66894f;
+	transition: all 0.2s ease;
+}
+
+.carousel_arrow:hover {
+	color: #93c572;
+	transform: translateY(-45%) scale(1.2);
 }
